welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:11: error: overriding method run in class SimpleBuggle of type ()Unit;
 method run needs `override' modifier
def run() {
    ^PictureMono2:1: error: method mono2 overrides nothing
override def mono2(){
             ^